--- a/assets/locales/lv_LV.json
+++ b/assets/locales/lv_LV.json
@@ -1040,5 +1040,8 @@
     "Overwrite file": "P\u0101rrakst\u012bt failu",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
