--- a/assets/locales/pl_PL.json
+++ b/assets/locales/pl_PL.json
@@ -1057,5 +1057,8 @@
     "Overwrite file": "Napisz istniej\u0105cy plik",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
