--- a/assets/locales/sk_SK.json
+++ b/assets/locales/sk_SK.json
@@ -1097,5 +1097,8 @@
     "Overwrite file": "Prep\u00edsa\u0165 s\u00fabor",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
