--- a/assets/locales/ast_ES.json
+++ b/assets/locales/ast_ES.json
@@ -973,5 +973,8 @@
     "Overwrite file": "Escribir enriba'l ficheru",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
