--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -1099,5 +1099,8 @@
     "Overwrite file": "Sobreescriure els fitxers",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
