--- a/assets/locales/da.json
+++ b/assets/locales/da.json
@@ -852,5 +852,8 @@
     "Overwrite file": "Overskriv fil",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
