--- a/assets/locales/eo.json
+++ b/assets/locales/eo.json
@@ -826,5 +826,8 @@
     "Overwrite file": "Anstata\u016digi dosierojn",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
