--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -1160,5 +1160,8 @@
     "Selected items": "Selected items",
     "IMS Common Cartridge v1.3": "IMS Common Cartridge v1.3",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
