--- a/assets/locales/hu_HU.json
+++ b/assets/locales/hu_HU.json
@@ -926,5 +926,8 @@
     "Overwrite file": "F\u00e1jl fel\u00fcl\u00edr\u00e1sa",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
