--- a/assets/locales/id_ID.json
+++ b/assets/locales/id_ID.json
@@ -829,5 +829,8 @@
     "Overwrite file": "Overwrite file",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
