--- a/assets/locales/ko_KR.json
+++ b/assets/locales/ko_KR.json
@@ -794,5 +794,8 @@
     "Overwrite file": "\ub36e\uc5b4\uc4f0\uae30",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
