--- a/assets/locales/mk_MK.json
+++ b/assets/locales/mk_MK.json
@@ -870,5 +870,8 @@
     "Overwrite file": "\u041f\u0440\u0435\u043f\u043e\u043a\u0440\u0438\u0458 \u0458\u0430 \u0434\u0430\u0442\u043e\u0442\u0435\u043a\u0430\u0442\u0430",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
