--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -1076,5 +1076,8 @@
     "Overwrite file": "Substituir ficheiro",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
