--- a/assets/locales/qu_PE.json
+++ b/assets/locales/qu_PE.json
@@ -946,5 +946,8 @@
     "Overwrite file": "Qelqapay",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
