--- a/assets/locales/ro_RO.json
+++ b/assets/locales/ro_RO.json
@@ -1079,5 +1079,8 @@
     "Overwrite file": "Suprascrie fi\u0219ierul",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
