--- a/assets/locales/so_SO.json
+++ b/assets/locales/so_SO.json
@@ -663,5 +663,8 @@
     "Select items": "Select items",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
