--- a/assets/locales/tr.json
+++ b/assets/locales/tr.json
@@ -881,5 +881,8 @@
     "Overwrite file": "Dosya \u00fczerine yaz",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
