--- a/assets/locales/zh_CN.json
+++ b/assets/locales/zh_CN.json
@@ -913,5 +913,8 @@
     "Overwrite file": "\u8986\u76d6\u6587\u4ef6",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
