--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -870,5 +870,8 @@
     "Overwrite file": "\u8986\u84cb\u6a94\u6848",
     "Selected items": "Selected items",
     "Scope": "Scope",
-    "Select source": "Select source"
+    "Select source": "Select source",
+    "No date": "No date",
+    "Download as ZIP": "Download as ZIP",
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
 }
