--- a/assets/locales/th.json
+++ b/assets/locales/th.json
@@ -822,5 +822,26 @@
     "Select source": "Select source",
     "No date": "No date",
     "Download as ZIP": "Download as ZIP",
-    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted.",
+    "subtitle": "\u0e0a\u0e37\u0e48\u0e2d\u0e40\u0e23\u0e37\u0e48\u0e2d\u0e07\u0e23\u0e2d\u0e07",
+    "Template type": "Template type",
+    "Edit task": "Edit task",
+    "Pending validation": "Pending validation",
+    "New project": "New project",
+    "Assign task": "Assign task",
+    "Select a task": "Select a task",
+    "Select a user": "Select a user",
+    "Target date": "Target date",
+    "Create a backup": "\u0e17\u0e33\u0e01\u0e32\u0e23\u0e2a\u0e33\u0e23\u0e2d\u0e07\u0e02\u0e49\u0e2d\u0e21\u0e39\u0e25",
+    "Completely delete this course": "\u0e25\u0e1a\u0e23\u0e32\u0e22\u0e27\u0e34\u0e0a\u0e32\u0e19\u0e35\u0e49",
+    "Could not load exportable items.": "Could not load exportable items.",
+    "You can close this message to continue.": "You can close this message to continue.",
+    "Select a contact": "Select a contact",
+    "No messages yet": "No messages yet",
+    "Pick someone in the left box to start chatting": "Pick someone in the left box to start chatting",
+    "Enter to send \u00b7 Shift+Enter for newline": "Enter to send \u00b7 Shift+Enter for newline",
+    "Delivered": "Delivered",
+    "Sending": "Sending",
+    "Are you sure you want to clear this conversation?": "Are you sure you want to clear this conversation?",
+    "New messages": "New messages"
 }
