--- a/assets/locales/ar.json
+++ b/assets/locales/ar.json
@@ -1154,5 +1154,29 @@
     "Select source": "Select source",
     "No date": "No date",
     "Download as ZIP": "Download as ZIP",
-    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted.",
+    "New task": "\u0645\u0642\u0627\u0644 \u062c\u062f\u064a\u062f",
+    "subtitle": "\u0627\u0644\u0639\u0646\u0648\u0627\u0646 \u0627\u0644\u0641\u0631\u0639\u064a",
+    "Template type": "Template type",
+    "Edit task": "Edit task",
+    "Pending validation": "Pending validation",
+    "New project": "New project",
+    "Assign task": "Assign task",
+    "Select a task": "Select a task",
+    "Select a user": "Select a user",
+    "Target date": "Target date",
+    "Create a backup": " \u0639\u0645\u0644 \u0646\u0633\u062e \u0627\u062d\u062a\u064a\u0627\u0637\u064a",
+    "Completely delete this course": "\u0625\u062d\u0630\u0641\u0652 \u0645\u0646\u0637\u0642\u0629\u064e \u0627\u0644\u0641\u0635\u0644\u0650 \u0627\u0644\u0643\u0627\u0645\u0644\u0629\u0650",
+    "Could not load exportable items.": "Could not load exportable items.",
+    "You can close this message to continue.": "You can close this message to continue.",
+    "No contacts found": "\u0644\u0645 \u064a\u062a\u0645 \u0627\u064a\u062c\u0627\u062f \u062c\u0647\u0627\u062a \u0627\u062a\u0635\u0627\u0644",
+    "Select a contact": "Select a contact",
+    "No messages yet": "No messages yet",
+    "Pick someone in the left box to start chatting": "Pick someone in the left box to start chatting",
+    "Write a message": "\u0627\u0643\u062a\u0628 \u0631\u0633\u0627\u0644\u0629",
+    "Enter to send \u00b7 Shift+Enter for newline": "Enter to send \u00b7 Shift+Enter for newline",
+    "Delivered": "Delivered",
+    "Sending": "Sending",
+    "Are you sure you want to clear this conversation?": "Are you sure you want to clear this conversation?",
+    "New messages": "New messages"
 }
