--- a/assets/locales/el.json
+++ b/assets/locales/el.json
@@ -1030,5 +1030,29 @@
     "Select source": "Select source",
     "No date": "No date",
     "Download as ZIP": "Download as ZIP",
-    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted.",
+    "New task": "\u039d\u03ad\u03b1 \u03b1\u03bd\u03ac\u03c1\u03c4\u03b7\u03c3\u03b7",
+    "subtitle": "\u03a5\u03c0\u03cc\u03c4\u03b9\u03c4\u03bb\u03bf\u03c2",
+    "Template type": "Template type",
+    "Edit task": "Edit task",
+    "Pending validation": "Pending validation",
+    "New project": "New project",
+    "Assign task": "Assign task",
+    "Select a task": "Select a task",
+    "Select a user": "Select a user",
+    "Target date": "Target date",
+    "Create a backup": "\u0394\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03af\u03b1 \u03b5\u03bd\u03cc\u03c2 \u03b1\u03bd\u03c4\u03b9\u03b3\u03c1\u03ac\u03c6\u03bf\u03c5 \u03b1\u03c3\u03c6\u03b1\u03bb\u03b5\u03af\u03b1\u03c2",
+    "Completely delete this course": "\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae \u03bf\u03bb\u03cc\u03ba\u03bb\u03b7\u03c1\u03bf\u03c5 \u03c4\u03bf\u03c5 \u03bc\u03b1\u03b8\u03ae\u03bc\u03b1\u03c4\u03bf\u03c2",
+    "Could not load exportable items.": "Could not load exportable items.",
+    "You can close this message to continue.": "You can close this message to continue.",
+    "No contacts found": "\u0394\u03b5\u03bd \u03b2\u03c1\u03ad\u03b8\u03b7\u03ba\u03b5 \u03b5\u03c0\u03b1\u03c6\u03ae",
+    "Select a contact": "Select a contact",
+    "No messages yet": "No messages yet",
+    "Pick someone in the left box to start chatting": "Pick someone in the left box to start chatting",
+    "Write a message": "\u0394\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03af\u03b1 \u03b5\u03bd\u03cc\u03c2 \u03bc\u03b7\u03bd\u03cd\u03bc\u03b1\u03c4\u03bf\u03c2",
+    "Enter to send \u00b7 Shift+Enter for newline": "Enter to send \u00b7 Shift+Enter for newline",
+    "Delivered": "Delivered",
+    "Sending": "Sending",
+    "Are you sure you want to clear this conversation?": "Are you sure you want to clear this conversation?",
+    "New messages": "New messages"
 }
