--- a/assets/locales/fa_IR.json
+++ b/assets/locales/fa_IR.json
@@ -1001,5 +1001,29 @@
     "Select source": "Select source",
     "No date": "No date",
     "Download as ZIP": "Download as ZIP",
-    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted.",
+    "New task": "\u0648\u0638\u06cc\u0641\u0647 \u062c\u062f\u06cc\u062f",
+    "subtitle": "\u0632\u0628\u0631 \u0639\u0646\u0648\u0627\u0646",
+    "Template type": "Template type",
+    "Edit task": "Edit task",
+    "Pending validation": "Pending validation",
+    "New project": "New project",
+    "Assign task": "Assign task",
+    "Select a task": "Select a task",
+    "Select a user": "Select a user",
+    "Target date": "Target date",
+    "Create a backup": "\u0627\u06cc\u062c\u0627\u062f \u06cc\u06a9 \u06a9\u067e\u06cc \u067e\u0634\u062a\u06cc\u0628\u0627\u0646\u06cc",
+    "Completely delete this course": "\u062d\u0630\u0641 \u0646\u0627\u062d\u06cc\u0647 \u062f\u0631\u0633",
+    "Could not load exportable items.": "Could not load exportable items.",
+    "You can close this message to continue.": "You can close this message to continue.",
+    "No contacts found": "\u0647\u06cc\u0686 \u0645\u062e\u0627\u0637\u0628\u06cc \u067e\u06cc\u062f\u0627 \u0646\u0634\u062f",
+    "Select a contact": "Select a contact",
+    "No messages yet": "No messages yet",
+    "Pick someone in the left box to start chatting": "Pick someone in the left box to start chatting",
+    "Write a message": "\u0646\u0648\u0634\u062a\u0646 \u06cc\u06a9 \u067e\u06cc\u0627\u0645",
+    "Enter to send \u00b7 Shift+Enter for newline": "Enter to send \u00b7 Shift+Enter for newline",
+    "Delivered": "Delivered",
+    "Sending": "Sending",
+    "Are you sure you want to clear this conversation?": "Are you sure you want to clear this conversation?",
+    "New messages": "New messages"
 }
