--- a/assets/locales/he_IL.json
+++ b/assets/locales/he_IL.json
@@ -1142,5 +1142,29 @@
     "Select source": "Select source",
     "No date": "No date",
     "Download as ZIP": "Download as ZIP",
-    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted.",
+    "New task": "\u05de\u05e9\u05d9\u05de\u05d4 \u05d7\u05d3\u05e9\u05d4",
+    "subtitle": "\u05db\u05ea\u05d5\u05d1\u05d9\u05ea",
+    "Template type": "Template type",
+    "Edit task": "Edit task",
+    "Pending validation": "Pending validation",
+    "New project": "New project",
+    "Assign task": "Assign task",
+    "Select a task": "Select a task",
+    "Select a user": "Select a user",
+    "Target date": "Target date",
+    "Create a backup": "\u05e6\u05d5\u05e8 \u05d2\u05d9\u05d1\u05d5\u05d9",
+    "Completely delete this course": "\u05de\u05d7\u05e7 \u05d0\u05ea \u05d4\u05e7\u05d5\u05e8\u05e1 \u05d4\u05d6\u05d4 \u05dc\u05d7\u05dc\u05d5\u05d8\u05d9\u05df",
+    "Could not load exportable items.": "Could not load exportable items.",
+    "You can close this message to continue.": "You can close this message to continue.",
+    "No contacts found": "\u05dc\u05d0 \u05e0\u05de\u05e6\u05d0\u05d5 \u05d0\u05e0\u05e9\u05d9 \u05e7\u05e9\u05e8",
+    "Select a contact": "Select a contact",
+    "No messages yet": "No messages yet",
+    "Pick someone in the left box to start chatting": "Pick someone in the left box to start chatting",
+    "Write a message": "\u05db\u05ea\u05d5\u05d1 \u05d4\u05d5\u05d3\u05e2\u05d4",
+    "Enter to send \u00b7 Shift+Enter for newline": "Enter to send \u00b7 Shift+Enter for newline",
+    "Delivered": "Delivered",
+    "Sending": "Sending",
+    "Are you sure you want to clear this conversation?": "Are you sure you want to clear this conversation?",
+    "New messages": "New messages"
 }
