--- a/assets/locales/hu_HU.json
+++ b/assets/locales/hu_HU.json
@@ -929,5 +929,29 @@
     "Select source": "Select source",
     "No date": "No date",
     "Download as ZIP": "Download as ZIP",
-    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted.",
+    "New task": "\u00daj cikk",
+    "subtitle": "felirat",
+    "Template type": "Template type",
+    "Edit task": "Edit task",
+    "Pending validation": "Pending validation",
+    "New project": "New project",
+    "Assign task": "Assign task",
+    "Select a task": "Select a task",
+    "Select a user": "Select a user",
+    "Target date": "Target date",
+    "Create a backup": "Ment\u00e9s l\u00e9trehoz\u00e1sa",
+    "Completely delete this course": "Az teljes kurzus t\u00f6rl\u00e9se",
+    "Could not load exportable items.": "Could not load exportable items.",
+    "You can close this message to continue.": "You can close this message to continue.",
+    "No contacts found": "Nem tal\u00e1lhat\u00f3k kapcsolatok",
+    "Select a contact": "Select a contact",
+    "No messages yet": "No messages yet",
+    "Pick someone in the left box to start chatting": "Pick someone in the left box to start chatting",
+    "Write a message": "\u00dczenet \u00edr\u00e1sa",
+    "Enter to send \u00b7 Shift+Enter for newline": "Enter to send \u00b7 Shift+Enter for newline",
+    "Delivered": "Delivered",
+    "Sending": "Sending",
+    "Are you sure you want to clear this conversation?": "Are you sure you want to clear this conversation?",
+    "New messages": "New messages"
 }
