--- a/assets/locales/mk_MK.json
+++ b/assets/locales/mk_MK.json
@@ -873,5 +873,27 @@
     "Select source": "Select source",
     "No date": "No date",
     "Download as ZIP": "Download as ZIP",
-    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted.",
+    "New task": "\u041d\u043e\u0432 \u043d\u0430\u043f\u0438\u0441",
+    "subtitle": "\u043f\u043e\u0434\u043d\u0430\u0441\u043b\u043e\u0432",
+    "Template type": "Template type",
+    "Edit task": "Edit task",
+    "Pending validation": "Pending validation",
+    "New project": "New project",
+    "Assign task": "Assign task",
+    "Select a task": "Select a task",
+    "Select a user": "Select a user",
+    "Target date": "Target date",
+    "Create a backup": "\u043a\u0440\u0435\u0438\u0440\u0430\u0458 \u0440\u0435\u0437\u0435\u0440\u0432\u043d\u0430_\u043a\u043e\u043f\u0438\u0458\u0430",
+    "Completely delete this course": "\u0411\u0440\u0438\u0448\u0435\u045a\u0435 \u043d\u0430 \u0446\u0435\u043b\u0438\u043e\u0442 \u043f\u0440\u043e\u0441\u0442\u043e\u0440 \u043d\u0430 \u043a\u0443\u0440\u0441\u043e\u0442",
+    "Could not load exportable items.": "Could not load exportable items.",
+    "You can close this message to continue.": "You can close this message to continue.",
+    "Select a contact": "Select a contact",
+    "No messages yet": "No messages yet",
+    "Pick someone in the left box to start chatting": "Pick someone in the left box to start chatting",
+    "Enter to send \u00b7 Shift+Enter for newline": "Enter to send \u00b7 Shift+Enter for newline",
+    "Delivered": "Delivered",
+    "Sending": "Sending",
+    "Are you sure you want to clear this conversation?": "Are you sure you want to clear this conversation?",
+    "New messages": "New messages"
 }
