--- a/assets/locales/my_MM.json
+++ b/assets/locales/my_MM.json
@@ -1164,5 +1164,29 @@
     "Select source": "Select source",
     "No date": "No date",
     "Download as ZIP": "Download as ZIP",
-    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted.",
+    "New task": "\u101c\u102f\u1015\u103a\u1004\u1014\u103a\u1038\u1021\u101e\u1005\u103a",
+    "subtitle": "\u1001\u1031\u102b\u1004\u103a\u1038\u1005\u1009\u103a\u1001\u103d\u1032",
+    "Template type": "Template type",
+    "Edit task": "Edit task",
+    "Pending validation": "Pending validation",
+    "New project": "New project",
+    "Assign task": "Assign task",
+    "Select a task": "Select a task",
+    "Select a user": "Select a user",
+    "Target date": "Target date",
+    "Create a backup": "\u1021\u101b\u1014\u103a\u101e\u102d\u1019\u103a\u1038\u1006\u100a\u103a\u1038\u1019\u103e\u102f\u1016\u1014\u103a\u1010\u102e\u1038\u1015\u102b",
+    "Completely delete this course": "\u1024\u101e\u1004\u103a\u1010\u1014\u103a\u1038\u1000\u102d\u102f \u101c\u102f\u1036\u1038\u101d\u1016\u103b\u1000\u103a\u1015\u102b",
+    "Could not load exportable items.": "Could not load exportable items.",
+    "You can close this message to continue.": "You can close this message to continue.",
+    "No contacts found": "\u1006\u1000\u103a\u101e\u103d\u101a\u103a\u101b\u1014\u103a\u1015\u102f\u1002\u1039\u1002\u102d\u102f\u101c\u103a\u1019\u103b\u102c\u1038 \u1019\u1010\u103d\u1031\u1037\u1015\u102b",
+    "Select a contact": "Select a contact",
+    "No messages yet": "No messages yet",
+    "Pick someone in the left box to start chatting": "Pick someone in the left box to start chatting",
+    "Write a message": "\u1005\u102c\u1010\u102d\u102f\u101b\u1031\u1038\u1015\u102b",
+    "Enter to send \u00b7 Shift+Enter for newline": "Enter to send \u00b7 Shift+Enter for newline",
+    "Delivered": "Delivered",
+    "Sending": "Sending",
+    "Are you sure you want to clear this conversation?": "Are you sure you want to clear this conversation?",
+    "New messages": "New messages"
 }
