--- a/assets/locales/sr_RS.json
+++ b/assets/locales/sr_RS.json
@@ -858,5 +858,28 @@
     "Select source": "Select source",
     "No date": "No date",
     "Download as ZIP": "Download as ZIP",
-    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted."
+    "Delete this folder? All files inside will be permanently deleted.": "Delete this folder? All files inside will be permanently deleted.",
+    "New task": "Novi \u010dlanak",
+    "subtitle": "podnaslov",
+    "Template type": "Template type",
+    "Edit task": "Edit task",
+    "Pending validation": "Pending validation",
+    "New project": "New project",
+    "Assign task": "Assign task",
+    "Select a task": "Select a task",
+    "Select a user": "Select a user",
+    "Target date": "Target date",
+    "Create a backup": "kreiraj backup",
+    "Completely delete this course": "Obri\u0161i celo okru\u017eenje kursa",
+    "Could not load exportable items.": "Could not load exportable items.",
+    "You can close this message to continue.": "You can close this message to continue.",
+    "Select a contact": "Select a contact",
+    "No messages yet": "No messages yet",
+    "Pick someone in the left box to start chatting": "Pick someone in the left box to start chatting",
+    "Write a message": "Napi\u0161ite poruku",
+    "Enter to send \u00b7 Shift+Enter for newline": "Enter to send \u00b7 Shift+Enter for newline",
+    "Delivered": "Delivered",
+    "Sending": "Sending",
+    "Are you sure you want to clear this conversation?": "Are you sure you want to clear this conversation?",
+    "New messages": "New messages"
 }
