--- a/assets/locales/el.json
+++ b/assets/locales/el.json
@@ -569,6 +569,7 @@
     "Unmark favorite": "Unmark favorite",
     "Mark favorite": "Mark favorite",
     "Register student": "Register student",
+    "Register Student": "Register Student",
     "Duration": "\u0394\u03b9\u03ac\u03c1\u03ba\u03b5\u03b9\u03b1",
     "Dependencies": "Dependencies",
     "Free": "Free",
@@ -1054,5 +1055,14 @@
     "Delivered": "Delivered",
     "Sending": "Sending",
     "Are you sure you want to clear this conversation?": "Are you sure you want to clear this conversation?",
+    "You are registered on %s": "You are registered on {0}",
+    "Hello %s,<br><br>You are registered on %s.<br>You can access your account from <a href=\"%s\">here</a>.<br><br>Your login credentials are:<br>Username: <strong>%s</strong><br>Password: <strong>%s</strong><br><br>Best regards,<br>%s": "Hello {0},<br><br>You are registered on {1}.<br>You can access your account from <a href=\"{2}\">here</a>.<br><br>Your login credentials are:<br>Username: <strong>{3}</strong><br>Password: <strong>{4}</strong><br><br>Best regards,<br>{5}",
+    "You have been enrolled in a new course": "You have been enrolled in a new course",
+    "Hello %s,<br><br>You have been enrolled in a new session: <strong>%s</strong>.<br>You can access your courses from <a href=\"%s\">here</a>.<br><br>Your current active sessions are:<br><ul>%s</ul><br>Best regards,<br>Chamilo": "Hello {0},<br><br>You have been enrolled in a new session: <strong>{1}</strong>.<br>You can access your courses from <a href=\"{2}\">here</a>.<br><br>Your current active sessions are:<br><ul>{3}</ul><br>Best regards,<br>Chamilo",
+    "Admin Favorites Courses": "Admin Favorites Courses",
+    "Admin Completed Courses": "Admin Completed Courses",
+    "Admin Incomplete Courses": "Admin Incomplete Courses",
+    "Admin Restart Courses": "Admin Restart Courses",
+    "Admin Dashboard": "Admin Dashboard",
     "New messages": "New messages"
 }
